# whiskers-launcher-emoji-extension

./: Cargo.toml  README.md  linux-extension  manifest.json
src/: main.rs
src/results/: mod.rs
