[package]
name = "whiskers-launcher-emoji-extension"
version = "1.0.0"
edition = "2021"

[dependencies]
emojis = "0.6.2"
#whiskers-launcher-rs = { git = "https://github.com/lighttigerXIV/whiskers-launcher-rs.git" }
whiskers-launcher-rs = { path = "/home/lighttigerxiv/Projects/Cli/whiskers-launcher-rs" }
fuzzy-matcher = "0.3.7"
convert_case = "0.6.0"